--- a/avos/Todo/public/index.html
+++ b/avos/Todo/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>AV JavaScript Todo App</title>
     <link href="css/todos.css" media="all" rel="stylesheet" type="text/css"/>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="js/underscore-1.1.6.js"></script>
     <script src="js/av.js"></script>
     <script src="js/todos.js"></script>
